--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="right-about">
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">15+</p>
+                            <p class="large-text">5+</p>
                             <p class="small-text">Projects <br /> Completed</p>
                         </div>
                     </div>
@@ -75,14 +75,14 @@
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">300+</p>
-                            <p class="small-text">Happy <br /> Clients</p>
+                            <p class="large-text">10+</p>
+                            <p class="small-text">Assited <br /> Projects</p>
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">400+</p>
-                            <p class="small-text">Customer <br /> reviews</p>
+                            <p class="large-text">20+</p>
+                            <p class="small-text">People <br /> reviews</p>
                         </div>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">ReactJS</p>
                         <div class="progress-con">
-                            <p class="prog-text">75%</p>
+                            <p class="prog-text">35%</p>
                             <div class="progress">
                                 <span class="react"></span>
                             </div>
@@ -129,7 +129,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">NodeJS</p>
                         <div class="progress-con">
-                            <p class="prog-text">87%</p>
+                            <p class="prog-text">40%</p>
                             <div class="progress">
                                 <span class="node"></span>
                             </div>
@@ -152,62 +152,34 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2010 - present</p>
-                    <h5>Web Developer<span> - Vircrosoft</span></h5>
+                    <p class="tl-duration">2016</p>
+                    <h5>Python<span> - Youtube</span></h5>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                        I started learning Python with the help of online resources from youtube
+                    </p>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2018 - 2020</p>
+                    <h5>Technician<span> - Comptia A+.</span></h5>
+                    <p>
+                        I joined an online class in preparation for my Comptia A+ exam and later took the exams and passed.
                     </p>
                 </div>
                 <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2008 - 2011</p>
-                    <h5>Software Engineer<span> - Boogle, Inc.</span></h5>
+                    <p class="tl-duration">2021 - 2023</p>
+                    <h5>Computer Science Degree<span> - IBLT</span></h5>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                        I got admission into a french school in togo to study computer science 
                     </p>
                 </div>
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2016 - 2017</p>
-                    <h5>C++ Programmer<span> - Slime Tech</span></h5>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-                    </p>
-                </div>
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2009 - 2013</p>
-                    <h5>Business Degree<span> - Sussex University</span></h5>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-                    </p>
-                </div>
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2013 - 2016</p>
-                    <h5>Computer Science Degree<span> - Brookes University</span></h5>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-                    </p>
-                </div>
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2017 - present</p>
-                    <h5>3d Animation<span> - Brighton University</span></h5>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-                    </p>
-                </div>
+                
             </div>
         </section>
         <section class="container" id="portfolio">
