--- a/index.html
+++ b/index.html
@@ -195,16 +195,10 @@
                         <img src="img/port1.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>E-Learning Platform</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://e-learning-platform-n673.vercel.app/" class="icon">
                                 <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
                             </a>
                         </div>
                     </div>
@@ -214,16 +208,10 @@
                         <img src="img/port2.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>Flanc</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://flanc.vercel.app/" class="icon">
                                 <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
                             </a>
                         </div>
                     </div>
@@ -233,16 +221,10 @@
                         <img src="img/port3.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>TO-DO-LIST</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://to-do-list-app-ten-bay.vercel.app/" class="icon">
                                 <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
                             </a>
                         </div>
                     </div>
