--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     <div class="hover-items">
                         <h3>E-Learning Platform</h3>
                         <div class="icons">
-                            <a href="https://e-learning-platform-n673.vercel.app/" class="icon">
+                            <a href="https://e-learning-platform-n673.vercel.app/" class="icon" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
                         </div>
@@ -210,7 +210,7 @@
                     <div class="hover-items">
                         <h3>Flanc</h3>
                         <div class="icons">
-                            <a href="https://flanc.vercel.app/" class="icon">
+                            <a href="https://flanc.vercel.app/" class="icon" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
                         </div>
@@ -223,7 +223,7 @@
                     <div class="hover-items">
                         <h3>TO-DO-LIST</h3>
                         <div class="icons">
-                            <a href="https://to-do-list-app-ten-bay.vercel.app/" class="icon">
+                            <a href="https://to-do-list-app-ten-bay.vercel.app/" class="icon" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
                         </div>
